Modified database backup and restore methods.

--- a/BackupAndRestoreDb/App.config
+++ b/BackupAndRestoreDb/App.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="BackupDirectory" value="E:\GitHub"/>
+  </appSettings>
+  
   <connectionStrings>
-    <add name="Database" connectionString="Data Source=localhost;Initial Catalog=Northwind;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"/>
+    <!-- Use master database as Initial Catalog -->
+    <add name="Database" connectionString="Data Source=localhost;Initial Catalog=master;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"/>
   </connectionStrings>
 </configuration>
